# VectorLaw

./: .gitignore  LICENSE  README.md  canada_extraction.ipynb  data_exploration.ipynb  extracting_cf.ipynb  pyproject.toml  scraping.py  test_pipeline.py
analysis/: README.md  __init__.py  prompts_example.py
data/: README.md
phase_2/: web_scraping.ipynb
phase_2/classification/: class_utils.py  classification.ipynb  embed_and_chunk.ipynb  prompts.py  summarization.ipynb  visualization.ipynb
urls/: README.md
utils/: __init__.py  embed.py  exploration.py  extract.py  process.py  rag.py  scraping.py  summarize.py  translate.py
