[tool.poetry]
name = "law-comparisons"
version = "0.1.0"
description = "A project for analyzing and comparing legal documents"
authors = ["Your Name <your.email@example.com>"]
# readme = "README.md"
# packages = [{include = "law_comparisons", from = "."}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
pandas = "^2.0.0"
numpy = "^1.24.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
plotly = "^5.15.0"
requests = "^2.31.0"
pypdf2 = "^3.0.1"
pymupdf = "^1.23.0"
tqdm = "^4.67.1"
googletrans = "^4.0.2"
nltk = "^3.9.2"
deep-translator = "^1.11.4"
transformers = "^4.57.1"
sentencepiece = "^0.2.1"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
dotenv = "^0.9.9"
openai = "^2.6.0"
langdetect = "^1.0.9"
fuzzywuzzy = "^0.18.0"
tiktoken = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Add any command-line scripts here if needed
